# my-cv

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: deploy.yml
my-cv-backend/: .dockerignore  .env.template  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
my-cv-backend/src/my_cv_backend/: credentials.py  email_sender.py  main.py  models.py
my-cv-frontend/: .dockerignore  README.md  docker-compose.yml  fontawesome.css  fontawesome.css.bak  index.html  script.js  sitemap.xml  style.css
my-cv-frontend/icons/: ets (1) (1).png:Zone.Identifier
nginx/: nginx.conf
nginx/conf.d/: default.conf.template
reverse-proxy/: Dockerfile  entrypoint.sh
reverse-proxy/conf.d/: default.conf.template
scripts/: renew-certs.sh
